<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ConstraintWrapHeight"
    android:padding="@dimen/dimens_10dp">
    <TextView
        android:id="@+id/tv_position"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_position"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_team"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/iv_team"
        style="@style/ImageViewTeamSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_position"
        app:layout_constraintRight_toLeftOf="@id/tv_name_team"/>
    <TextView
        android:id="@+id/tv_name_team"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_team_name"
        app:layout_constraintHorizontal_weight="10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_team"
        app:layout_constraintRight_toLeftOf="@id/tv_played"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_played"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_play"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_name_team"
        app:layout_constraintRight_toLeftOf="@id/tv_goal"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_goal"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_goal_standing"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_played"
        app:layout_constraintRight_toLeftOf="@id/tv_win"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_win"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_win"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_goal"
        app:layout_constraintRight_toLeftOf="@id/tv_draw"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_draw"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_draw"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_win"
        app:layout_constraintRight_toLeftOf="@id/tv_lose"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_lose"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_loss"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_draw"
        app:layout_constraintRight_toLeftOf="@id/tv_point"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_point"
        style="@style/TextBoldSmall"
        android:layout_width="@dimen/dimens_0dp"
        android:text="@string/label_point"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_lose"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>